complete index.html and some styling

--- a/pricelist.html
+++ b/pricelist.html
@@ -17,7 +17,7 @@
     
     <title>Document</title>
 </head>
-<body>
+<body class="price">
     <header>
         <div class="row">
             <a href="index html">
@@ -92,7 +92,29 @@
   </tr>
   </tbody>
 </table>
-
+</br>
+</br>
+</br>
 </section>
+
+<footer class="list">
+
+    <div class="container">
+      <div class="row fimg">
+        <div class="col-md-4">
+          <p>@getUweb 2018. All right reserved.</p>
+        </div>
+        <div class="col-md-4">
+          <a href="#" target="_blank">
+              <img src="images/FBlogo.png"></a>
+          <a href="https://www.instagram.com/heritagedraws/" target="_blank">
+              <img src="images/instagram.jpg"></a>
+        </div>
+      </div>
+
+    </div>
+
+
+  </footer>
 </body>
 </html>
